--- a/CivitParser.Model/CivitParser.Model.csproj
+++ b/CivitParser.Model/CivitParser.Model.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="8.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.24.0" />
     <PackageReference Include="Serilog" Version="4.0.2-dev-02226" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Saltworks\Saltworks.csproj" />
   </ItemGroup>
 
 </Project>
