--- a/CivitParser/CivitParser.csproj
+++ b/CivitParser/CivitParser.csproj
@@ -8,16 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="8.0.0" />
-    <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Polly" Version="8.4.1" />
     <PackageReference Include="Polly.Extensions" Version="8.4.1" />
-    <PackageReference Include="Serilog" Version="4.0.2-dev-02226" />
-    <PackageReference Include="Serilog.Extensions.Autofac.DependencyInjection" Version="5.0.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
-    <PackageReference Include="Serilog.Sinks.Debug" Version="3.0.0" />
-    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
-    <PackageReference Include="Serilog.Sinks.Trace" Version="4.0.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.24.0" />
+    <PackageReference Include="Spectre.Console" Version="0.49.2-preview.0.24" />
+    <PackageReference Include="Spectre.Console.Cli" Version="0.49.2-preview.0.24" />
+    <PackageReference Include="Spectre.Console.Extensions.Logging" Version="0.3.0-alpha0011" />
+    <PackageReference Include="Spectre.Console.Extensions.Progress" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CivitParser.Model\CivitParser.Model.csproj" />
+    <ProjectReference Include="..\Saltworks\Saltworks.csproj" />
   </ItemGroup>
 
 </Project>
